@@ -50,8 +50,14 @@ The default is \fB0\fR (or \fBnone\fR).
 \fB\-\-disallowed\fR
 Include objects disallowed by administrative limitations.
 .TP
+\fB--best-memattr\fR <name>
+Select the best NUMA node among the given memory binding set by looking
+at the memory attribute given by \fI<name>\fR (or as an index).
+If the memory attribute values depend on the initiator, the CPU binding
+set is used as the initiator.
+.TP
 \fB--hbm\fR
-Only take high bandwidth memory nodes (such as Intel Xeon Phi MCDRAM)
+Only take high bandwidth memory nodes (Intel Xeon Phi MCDRAM)
 in account when looking for NUMA nodes in the input locations.
 
 This option must be combined with NUMA node locations,
@@ -59,7 +65,7 @@ such as \fI--hbm numa:1\fR for binding on the second HBM node.
 It may also be written as \fIhbm:1\fR.
 .TP
 \fB--no-hbm\fR
-Ignore high bandwidth memory nodes (such as Intel Xeon Phi MCDRAM)
+Ignore high bandwidth memory nodes (Intel Xeon Phi MCDRAM)
 when looking for NUMA nodes in the input locations.
 .
 .SH OPTIONS
@@ -242,7 +248,11 @@ To bind on the first PU of all cores of the first package:
     $ hwloc-bind package:0.core:all.pu:0 -- echo hello
     $ hwloc-bind --no-smt package:0 -- echo hello
 
-To bind memory on the first high-bandwidth memory node:
+To bind on the memory node local to a PU with largest capacity:
+
+    $ hwloc-bind --best-memattr capacity --cpubind pu:23 --membind pu:23 -- echo hello
+
+To bind memory on the first high-bandwidth memory node on Intel Xeon Phi:
 
     $ hwloc-bind --membind hbm:0 -- echo hello
     $ hwloc-bind --hbm --membind numa:0 -- echo hello
