@@ -702,6 +702,78 @@ hwloc_utils_get_best_node_in_array_by_memattr(hwloc_topology_t topology, hwloc_m
   return -1;
 }
 
+static __hwloc_inline int
+hwloc_utils_get_best_node_in_nodeset_by_memattr(hwloc_topology_t topology, hwloc_memattr_id_t id,
+                                                hwloc_nodeset_t nodeset,
+                                                struct hwloc_location *initiator)
+{
+  unsigned nbtgs, i, j;
+  hwloc_obj_t *tgs;
+  int best;
+  hwloc_uint64_t *values, bestvalue;
+  unsigned long mflags;
+  int err;
+
+  err = hwloc_memattr_get_flags(topology, id, &mflags);
+  if (err < 0)
+    goto out;
+
+  nbtgs = 0;
+  err = hwloc_memattr_get_targets(topology, id, initiator, 0, &nbtgs, NULL, NULL);
+  if (err < 0)
+    goto out;
+
+  tgs = malloc(nbtgs * sizeof(*tgs));
+  values = malloc(nbtgs * sizeof(*values));
+  if (!tgs || !values)
+    goto out_with_arrays;
+
+  err = hwloc_memattr_get_targets(topology, id, initiator, 0, &nbtgs, tgs, values);
+  if (err < 0)
+    goto out_with_arrays;
+
+  best = -1;
+  bestvalue = 0;
+  hwloc_bitmap_foreach_begin(i, nodeset) {
+    for(j=0; j<nbtgs; j++)
+      if (tgs[j]->os_index == i)
+        break;
+    if (j==nbtgs)
+      /* no target info for this node */
+      continue;
+    if (best == -1) {
+      best = i;
+      bestvalue = values[j];
+    } else if (mflags & HWLOC_MEMATTR_FLAG_HIGHER_FIRST) {
+      if (values[j] > bestvalue) {
+        best = i;
+        bestvalue = values[j];
+      }
+    } else {
+      assert(mflags & HWLOC_MEMATTR_FLAG_LOWER_FIRST);
+      if (values[j] < bestvalue) {
+        best = i;
+        bestvalue = values[j];
+      }
+    }
+  } hwloc_bitmap_foreach_end();
+
+  if (best == -1)
+    hwloc_bitmap_zero(nodeset);
+  else
+    hwloc_bitmap_only(nodeset, best);
+
+  free(tgs);
+  free(values);
+  return 0;
+
+ out_with_arrays:
+  free(tgs);
+  free(values);
+ out:
+  return -1;
+}
+
 static __hwloc_inline unsigned long
 hwloc_utils_parse_restrict_flags(char * str){
   struct hwloc_utils_parsing_flag possible_flags[] = {
