@@ -44,6 +44,8 @@ Version 2.3.0
     lists of flag names (substrings).
   + hwloc-info has new --local-memory --local-memoty-flags and --best-memattr
     options for reporting local memory nodes and filtering by memory attributes.
+  + hwloc-bind has a new --best-memattr option for filtering by memory attributes
+    among the memory binding set.
   + Tools that have a --restrict option may now receive a nodeset or
     some custom flags for restricting the topology.
   + Fix lstopo drawing when autoresizing on Windows 10.
